Changelog for Shake

    #182, use js-jquery and js-flot
    #195, add getConfigKeys
    #194, replace *> with %> as the operator for rules
    #188, improve the docs on FilePattern
    #187, removeFiles on a missing directory should do nothing
    #166, add withTempFile and withTempDir in the Action monad
    Ensure Ninja response files are always deleted
    Fix incorrect units when showing profile to the console
    Require the extra library
    #178, make --help show the current executable name
0.13.4
    #171, fix the --demo mode on Linux
0.13.3
    Ensure you wait until the progress thread cleans up
    Add --demo mode
    Add --progress=record and --progress=replay
    Add -j to run with one thread per processor
    Fix progress reporting to work even on the first run
    Apply abbreviations to staunch failure messages
    Fix failure progress messages during staunch mode
    #165, make |*> matching with simple files much faster
    Add toStandard to the FilePath module
    #130, support msvc_deps_prefix in Ninja
    #157, allow variable substitution in include/subninja statements
    #147, add the version in the profile reports
    #147, add --numeric-version flag
    #28, switch to continuation passing style, uses far less threads
    #156, add readConfigFileWithEnv for configs with an initial env
    #129, fix processor count detection on Mac with -threaded
    #155, add --live and shakeLiveFiles
    #153, handle escaped spaces in parseMakefile
    #152, fix typo in the manual
    Add copyFileChanged
    Fix the leaf column in profile reports
    Add Maybe instances for cmd arguments
    Add a --profile flag (alias for --report)
    Switch to an underlying continuation monad
0.13.2
    #95, ensure progress never gets corrupted
    #124, add a profile report demo
    #128, allow long Ninja command lines
    Fix --report=- for builds with no commands in them
0.13.1
    Remove all package upper bounds